[gd_scene load_steps=2 format=3 uid="uid://debug_console"]

[ext_resource type="Script" path="res://scripts/debug_console.gd" id="1_debug_console"]

[node name="DebugConsole" type="CanvasLayer"]
layer = 100
script = ExtResource("1_debug_console")

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "DEBUG CONSOLE (Press F1 to close)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OutputScroll" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
scroll_vertical = 0

[node name="OutputLog" type="RichTextLabel" parent="Panel/VBoxContainer/OutputScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=lime]Debug Console Ready[/color]
Type 'help' for available commands"
fit_content = true
scroll_following = true

[node name="InputContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Prompt" type="Label" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
text = ">"

[node name="Input" type="LineEdit" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter command..."

[connection signal="text_submitted" from="Panel/VBoxContainer/InputContainer/Input" to="." method="_on_input_text_submitted"]
